[package]
name = "mail_ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-smtp = "0.4.0"
lettre = { version = "0.10.0-rc.6", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }
reqwest = "0.11.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros"] }
toml = "0.5.9"

openssl = { version = "0.10", features = ["vendored"] }